2009-07-09  Scott James Remnant  <scott@netsplit.com>

	* init/conf.h,
	* init/control.h,
	* init/event.h,
	* init/job_class.h: Variable declarations in header files need to
	be prefixed with "extern", the NIH_BEGIN_EXTERN stuff only applies
	to C++.

	* util/reboot.c: Reboot can't write the shutdown time before
	calling shutdown, otherwise shutdown won't be able to get the
	current runlevel anymore.
	* util/man/reboot.8: Update, we don't write the shutdown time
	before calling shutdown - it's up to the shutdown scripts to
	call reboot -w before remounting the root filesystem.

	* util/tests/test_utmp.c (test_get_runlevel): Replace test case
	with one that expects 'N' rather than fall-through.
	* util/tests/test_sysv.c (test_change_runlevel): Expect N when
	there is no previous runlevel

	* util/utmp.c (utmp_read_runlevel): Also catch a zero runlevel from
	utmp, replacing with 'N' - these functions should never return 0
	* util/sysv.c (sysv_change_runlevel): Should set prevlevel to N
	when we don't find one

	* util/utmp.c (utmp_read_runlevel): Catch a negative runlevel from
	corrupt utmp data, convert to 'N'
	(utmp_get_runlevel): Return N when RUNLEVEL is set but empty,
	rather than falling through

	* util/telinit.c: Catch a missing argument separately so we don't
	output "(null)"

	* README: Update requirements.
	* TODO: Update.

	* conf/rc-sysinit.conf: Fix typo.

2009-07-08  Scott James Remnant  <scott@netsplit.com>

	* conf/rc-sysinit.conf: Michael Biebl pointed out that by setting
	the runlevel to "S" during sysinit, we end up with the runlevel
	after boot being "S 2" - and that means scripts in rc2.d that
	are also in rcS.d won't get started.  The way we had it before
	("N 2") was correct.  This happily fixes the one corner case our
	reboot handling didn't cover - crashing in single user mode and
	rebooting.

	* util/telinit.c: Fix missing ret = from kill

	* conf/rc-sysinit.conf: Ignore -s/single if we're already coming
	from single-user-mode.
